sql insert error output.txt
(data_engineering) d:\projects\udacity\Data_Warehouse>python etl.py
Traceback (most recent call last):
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 1802, in _execute_context
    self.dialect.do_execute(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\default.py", line 732, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'ll Slap Your Face (Entertainment USA Theme),
            ARSVTNL1187B992A91,
            2001,
            129.0
        )
    ON CONFLICT (song_id) DO NOTHING;
"
LINE 13:             I'll Slap Your Face (Entertainment USA Theme),
                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "d:\projects\udacity\Data_Warehouse\etl.py", line 172, in <module>
    main()
  File "d:\projects\udacity\Data_Warehouse\etl.py", line 166, in main
    insert_tables()
  File "d:\projects\udacity\Data_Warehouse\etl.py", line 66, in insert_tables
    connection.execute(insert_songs)
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 1274, in execute
    return self._exec_driver_sql(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 1578, in _exec_driver_sql
    ret = self._execute_context(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 1845, in _execute_context
    self._handle_dbapi_exception(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 2026, in _handle_dbapi_exception
    util.raise_(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\util\compat.py", line 207, in raise_
    raise exception
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\base.py", line 1802, in _execute_context
    self.dialect.do_execute(
  File "C:\Users\Joseph Blackman\.conda\envs\data_engineering\lib\site-packages\sqlalchemy\engine\default.py", line 732, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) unterminated quoted string at or near "'ll Slap Your Face (Entertainment USA Theme),
            ARSVTNL1187B992A91,
            2001,
            129.0
        )
    ON CONFLICT (song_id) DO NOTHING;
"
LINE 13:             I'll Slap Your Face (Entertainment USA Theme),
                      ^

[SQL:
    INSERT INTO songs
        (
            song_id,
            title,
            artist_id,
            year,
            duration
        )
    VALUES
        (
            SOEKAZG12AB018837E,
            I'll Slap Your Face (Entertainment USA Theme),
            ARSVTNL1187B992A91,
            2001,
            129.0
        )
    ON CONFLICT (song_id) DO NOTHING;
]
(Background on this error at: https://sqlalche.me/e/14/f405)